src/pages/Auth/Auth.module.css
.authWrapper {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.toggleText {
  padding-top: 0.6rem;
}

.btnLink {
  background-color: inherit;
  border: none;
  color: #98ffff;
  font-family: inherit;
  font-size: inherit;
  font-weight: 700;
  text-decoration: underline;
  cursor: pointer;
}

